structure of the code

--- a/index.html
+++ b/index.html
@@ -12,12 +12,26 @@
 
 </head>
 <body>
-  
 
+  <header>
 
+    <div>
+    </div>
+
+    <div class="downloadbutton">
+    </div>
+
+  </header>
+
+  <main>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+  </main>
   
   <footer>
-   
   </footer>
 </body>
 </html>
