title and p font style - beginning of the header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css"> 
+  <!-- googlefont link --> 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet"> 
+  
   
   <title> Clipboard landing page</title>
 
@@ -15,7 +23,11 @@
 
   <header>
 
+    <img src="images/logo.svg" alt="C logo of clipboard">
+
     <div>
+      <h1>A History of everything you copy</h1>
+      <p>Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
     </div>
 
     <div class="downloadbutton">
