header mobile version

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
     <img src="images/logo.svg" alt="C logo of clipboard">
 
     <div>
-      <h1>A History of everything you copy</h1>
+      <h1>A history of everything you copy</h1>
       <p>Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
     </div>
 
     <div class="downloadbutton">
+      <button class="iosbutton button"> Download for iOS</button>
+      <button class="macbutton button"> Download for Mac</button>
     </div>
 
   </header>
