--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
   </header>
 
   <main>
-    <section></section>
+    <section>
+      <div>
+        <h2>Keep track of your snippets</h2>
+        <p>clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediatlely on all your devices. Our Mac and iOS apps will help you organize everything.</p>
+      </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
