first section mobile version

--- a/index.html
+++ b/index.html
@@ -39,10 +39,31 @@
 
   <main>
     <section>
+
       <div>
         <h2>Keep track of your snippets</h2>
         <p>clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediatlely on all your devices. Our Mac and iOS apps will help you organize everything.</p>
       </div>
+
+      <div class="storingfunction">
+        <img src="images/image-computer.png" alt="picture of a computer">
+        
+        <div>
+        <h3>Quick Search</h3>
+        <p>Easily search your snippets by content, category, web adress, application, and more.</p>
+
+       
+      </div>
+      <div>
+        <h3>iCloud Sync</h3>
+        <p>Instantly saves and syncs snippets accross all your devices.</p>
+      </div>
+      <div>
+        <h3>Complete History</h3>
+        <p>Retrieve any snippets from the first moment you started using the app.</p>
+      </div>
+      </div>
+
     </section>
     <section></section>
     <section></section>
