responsive first section finished

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <img src="images/logo.svg" alt="C logo of clipboard">
 
-    <div>
+    <div class="text margin">
       <h1>A history of everything you copy</h1>
       <p>Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
     </div>
@@ -40,28 +40,29 @@
   <main>
     <section>
 
-      <div>
+      <div class="margin">
         <h2>Keep track of your snippets</h2>
         <p>clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediatlely on all your devices. Our Mac and iOS apps will help you organize everything.</p>
       </div>
 
       <div class="storingfunction">
         <img src="images/image-computer.png" alt="picture of a computer">
-        
-        <div>
+        <div class="functions">
+        <div class="textfunctions">
         <h3>Quick Search</h3>
         <p>Easily search your snippets by content, category, web adress, application, and more.</p>
 
        
       </div>
-      <div>
+      <div class="textfunctions">
         <h3>iCloud Sync</h3>
         <p>Instantly saves and syncs snippets accross all your devices.</p>
       </div>
-      <div>
+      <div class="textfunctions">
         <h3>Complete History</h3>
         <p>Retrieve any snippets from the first moment you started using the app.</p>
       </div>
+    </div>
       </div>
 
     </section>
