--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
       </div>
 
     </section>
-    <section></section>
+    <section>
+      <div class="section2">
+      <div class="margin">
+        <h2>Access Clipboard Anywhere</h2>
+        <p>Whether you're on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
+      </div>
+
+      <img src="images/image-devices.png" alt="picture of a tablett with a smartphone">
+    </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
