--- a/index.html
+++ b/index.html
@@ -76,7 +76,42 @@
       <img src="images/image-devices.png" alt="picture of a tablett with a smartphone">
     </div>
     </section>
-    <section></section>
+    <section>
+      <div class="section3">
+        <div class="margin">
+          <h2>Supercharge your workflow</h2>
+          <p> We've got the tools to boost your productivity.</p>
+        </div>
+
+        <div class="logosection">
+
+        <div class="textlogo">
+          <img src="images/icon-blacklist.svg" alt="icon of a paper list">
+          <div>
+          <h3>Create blacklists</h3>
+          <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources</p>
+        </div>
+        </div>
+
+        <div class="textlogo">
+          <img src="images/icon-text.svg" alt="icon of a capital A">
+          <div>
+          <h3>Plain text snippets</h3>
+          <p>Remove unwanted formatting from copied text for a consistent look</p>
+        </div>
+        </div>
+
+        <div class="textlogo">
+          <img src="images/icon-preview.svg" alt="icon of an open eye">
+          <div>
+          <h3>Sneak preview</h3>
+          <p>Quick preview of all snippets on your Clipboard for easy access</p>
+        </div>
+        </div>
+        </div>
+
+      </div>
+    </section>
     <section></section>
     <section></section>
   </main>
