main finished with responsive

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
   <main>
     <section>
+      
 
       <div class="margin">
         <h2>Keep track of your snippets</h2>
@@ -64,6 +65,7 @@
       </div>
     </div>
       </div>
+    </div>
 
     </section>
     <section>
@@ -112,8 +114,31 @@
 
       </div>
     </section>
-    <section></section>
-    <section></section>
+    <section>
+      <div class="logocompany">
+        <img src="images/logo-google.png" alt="Google logo">
+        <img src="images/logo-ibm.png" alt="IBM logo">
+        <img src="images/logo-microsoft.png" alt="Microsoft logo">
+        <img src="images/logo-hp.png" alt="Hewlett-Packard logo">
+        <img src="images/logo-vector-graphics.png" alt="Vectorgraphic logo">
+
+        </div>
+    </section>
+    <section>
+
+      <div class="section5">
+
+      <div class="margin">
+        <h2>Clipboard for iOS and Mac OS</h2>
+        <p>Available for free ont the App Store, Download for Mac or iOS, sync with iCloud and you're ready to start adding to your clipboard.</p>
+      </div>
+      <div class="downloadbutton">
+        <button class="iosbutton button"> Download for iOS</button>
+        <button class="macbutton button"> Download for Mac</button>
+      </div>
+    </div>
+
+    </section>
   </main>
   
   <footer>
