--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet"> 
+<!-- fontawesome link -->
+
+<script src="https://kit.fontawesome.com/489d33a3d6.js" crossorigin="anonymous"></script>
   
   
   <title> Clipboard landing page</title>
@@ -142,6 +145,20 @@
   </main>
   
   <footer>
+    <img class="logofooter" src="images/logo.svg" alt="C logo of Clipboard">
+    <ul>
+      <li>FAQs</li>
+      <li>Contact Us</li>
+      <li>Privacy Policy</li>
+      <li>Press Kit</li>
+      <li>Install Guide</li>
+    </ul>
+
+    <div class="medialogo">
+      <i class="fa-brands fa-facebook"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-instagram"></i>
+    </div>
   </footer>
 </body>
 </html>
