--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
 
       <div class="storingfunction">
-        <img src="images/image-computer.png" alt="picture of a computer">
+        <img class="imgComputer" src="images/image-computer.png" alt="picture of a computer">
         <div class="functions">
         <div class="textfunctions">
         <h3>Quick Search</h3>
@@ -68,7 +68,7 @@
       </div>
     </div>
       </div>
-    </div>
+   
 
     </section>
     <section>
@@ -117,7 +117,7 @@
 
       </div>
     </section>
-    <section>
+    
       <div class="logocompany">
         <img src="images/logo-google.png" alt="Google logo">
         <img src="images/logo-ibm.png" alt="IBM logo">
@@ -126,7 +126,7 @@
         <img src="images/logo-vector-graphics.png" alt="Vectorgraphic logo">
 
         </div>
-    </section>
+    
     <section>
 
       <div class="section5">
@@ -156,7 +156,7 @@
 
     <div class="medialogo">
       <i class="fa-brands fa-facebook"></i>
-      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-twitter"></i >     
       <i class="fa-brands fa-instagram"></i>
     </div>
   </footer>
